# OxygenTracker

./: .env  .env.example  .replit  IMPORT_GUIDE.md  LOCAL_SETUP.md  MODAL_FLICKERING_SOLUTIONS.md  PERFORMANCE_FIXES.md  PYTHONANYWHERE_DEPLOY.md  PYTHONANYWHERE_FIX.md  PYTHONANYWHERE_STATIC_FIX.md  README.md  README_DEPLOYMENT.md  README_DEPLOYMENT_WINDOWS.md  README_LOCAL.md  README_LOCAL_SETUP.md  access_connector.py  app.py  app_mysql.py  app_mysql_fixed.py  auth_models.py  check_pythonanywhere.py  config.py  data_importer.py  data_importer_backup.py  db_migration.py  db_models.py  db_service.py  debug_dashboard.py  deploy_to_fly.bat  deploy_to_fly.ps1  deploy_to_fly.sh  email_service.py  fly_data_import.bat  fly_data_import.py  import_batch.py  import_config.json  import_from_json.py  import_to_mysql.py  import_to_mysql_fixed.py  instant_cylinder_importer.py  (+34 more)
attached_assets/: Pasted--extends-base-html-block-title-Add-Cylinder-Varasai-Oxygen-endblock-bloc-1753042159659_1753042159661.txt
data/: customers.json  customers.json.backup_20250717_105533  customers.json.backup_20250717_163402  cylinders.json  cylinders.json.backup_20250713_161447  last_backup.json  rental_history.json  users.json
static/: style.css
templates/: 404.html  500.html  add_customer.html  add_cylinder.html  base.html  borrow_cylinder.html  bulk_cylinder_management.html  bulk_rental_management.html  customer_active_dispatches.html  customer_details.html  customer_details_new.html  customers.html  cylinder_details.html  cylinders.html  edit_customer.html  edit_cylinder.html  import_data.html  (+12 more)
(+13 files in other folders)
